JDGUI: -fixes thread 87176 build>full
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@44084 ebf7c1c2-ba36-0410-9fe8-c592906822b4

Former-commit-id: 058f28f8af268e8be58df59ba02344bf5ccdd7a8